[gd_scene load_steps=10 format=3 uid="uid://hsmo2ix80mf4"]

[ext_resource type="Texture2D" uid="uid://dlxh4ut7ep7bo" path="res://assets/card.png" id="1_g18jx"]
[ext_resource type="Script" uid="uid://bavnkd2uhwyrx" path="res://menu/menu.gd" id="1_juveg"]
[ext_resource type="FontFile" uid="uid://bquo3we8s13cr" path="res://assets/Salmon Typewriter 9 Regular.ttf" id="2_6nwqt"]
[ext_resource type="Texture2D" uid="uid://45llt6y8v8ni" path="res://assets/shepherd.png" id="3_6nwqt"]
[ext_resource type="Texture2D" uid="uid://bkkbagpowlxeu" path="res://assets/button.png" id="4_pbjm4"]
[ext_resource type="Texture2D" uid="uid://cpjoblnkiwwt2" path="res://assets/sheep.png" id="5_svuvw"]
[ext_resource type="AudioStream" uid="uid://w1eypbijqp7i" path="res://assets/click1.ogg" id="7_v6yed"]
[ext_resource type="AudioStream" uid="uid://nthd7yai5e1h" path="res://assets/sheep_alert.wav" id="8_s4hbh"]
[ext_resource type="AudioStream" uid="uid://cyuab5tpg66p7" path="res://assets/die.wav" id="9_6fswf"]

[node name="Menu" type="Control"]
process_mode = 2
use_parent_material = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juveg")

[node name="Card" type="TextureRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -45.0
offset_right = 90.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_g18jx")

[node name="Guide" type="Label" parent="Card"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -21.0
offset_right = 74.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.22352941, 0.1254902, 0.18039216, 1)
theme_override_fonts/font = ExtResource("2_6nwqt")
theme_override_font_sizes/font_size = 9
text = "Gotta keepup the
light until sunrises
and protect my sheep."

[node name="Avatar" type="TextureRect" parent="Card"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.000008
offset_top = -88.0
offset_right = -16.000008
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
texture = ExtResource("3_6nwqt")

[node name="Actions" type="HBoxContainer" parent="Card"]
use_parent_material = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -17.0
offset_right = 66.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ExitButton" type="TextureButton" parent="Card/Actions"]
use_parent_material = true
layout_mode = 2
texture_normal = ExtResource("4_pbjm4")

[node name="ExitLabel" type="Label" parent="Card/Actions/ExitButton"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -6.0
offset_right = 14.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6nwqt")
theme_override_font_sizes/font_size = 9
text = "Exit"

[node name="StartButton" type="TextureButton" parent="Card/Actions"]
use_parent_material = true
layout_mode = 2
texture_normal = ExtResource("4_pbjm4")

[node name="StartLabel" type="Label" parent="Card/Actions/StartButton"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -6.0
offset_right = 17.5
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6nwqt")
theme_override_font_sizes/font_size = 9
text = "Start"

[node name="Sheep" type="TextureRect" parent="Card"]
use_parent_material = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = -1.0
offset_right = -26.0
offset_bottom = 23.0
grow_horizontal = 0
scale = Vector2(2, 2)
texture = ExtResource("5_svuvw")

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_v6yed")

[node name="SheepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_s4hbh")

[node name="PlayerDieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6fswf")

[connection signal="pressed" from="Card/Actions/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Card/Actions/StartButton" to="." method="_on_start_button_pressed"]
